test/cases/compile_errors/zon/invalid_number.zon
368934881474191032a32
